Setup css environment

--- a/views/main.pug
+++ b/views/main.pug
@@ -1,4 +1,6 @@
-h1 Hello Jade
+link(type='text/css', rel='stylesheet', href='/css/styles.css')
+
+h1.head Hello Jade
 
 p Lorem ipsum dolor sit amet,
   | consectetur adipiscing elit.
