Seperate server and client

--- a/Server/views/main.pug
+++ b/Server/views/main.pug
@@ -6,5 +6,7 @@ html(lang='en')
     script(type='text/javascript', src='/js/phaser.min.js')
     link(type='text/css', rel="stylesheet", href='/css/styles.css')
   body
+    //- h1 #{user.username}
     p.head HELLOWORLD
+    script(type='text/javascript', src='/js/states/MainState.js')
     script(type='text/javascript', src='/js/mainGame.js')
